--- a/src/styles/-variables.scss
+++ b/src/styles/-variables.scss
@@ -23,6 +23,7 @@ $fontsize15:15px;
 $fontsize16:16px;
 $fontsize17:17px;
 $fontsize19:19px;
+$fontsize20:20px;
 $fontsize21:21px;
 $fontsize23:23px;
 $fontsize25:25px;
