--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1476,8 +1476,8 @@
 .fixed-table{
   .table-mask{
     position: fixed;
-    top: 60px;
-    background-color: #f6f7fa;
+    top:52px;
+    background-color: #f0f0f0;
     height:30px;
     z-index: 8;
   }
