--- a/src/styles/-home.scss
+++ b/src/styles/-home.scss
@@ -66,22 +66,29 @@
                         background-size:100% auto;
                         z-index:-1;
                     }
-                    span{
+                    p{
                         width:80px;
                         height:80px;
                         position:relative;
                         display:block;
                         margin:0 auto;
-                        img{
-                            position:absolute;
-                            left:0px;
+                        span{
+                            clear: both;
                             width:100%;
-                            top:0%;
-                            object-fit:cover;
-                            transition:all 0.5s;
-                            border:solid 2px #fae6ba;
-                            overflow:hidden;
-                            border-radius:50%;
+                            height:100%;
+                            position:relative;
+                            display:block;
+                            img{
+                                position:absolute;
+                                left:0px;
+                                width:100%;
+                                top:0%;
+                                object-fit:cover;
+                                transition:all 0.5s;
+                                border:solid 2px #fae6ba;
+                                overflow:hidden;
+                                border-radius:50%;
+                            }
                         }
                         i{
                             position:absolute;
