--- a/src/styles/-home.scss
+++ b/src/styles/-home.scss
@@ -1,5 +1,5 @@
 ﻿.home-index{
-    &.scroll-panel{padding:20px 20px 20px 10px;}
+    &.scroll-panel{padding:20px 20px 20px 20px;}
     .infoBox{
         position:relative;
         &:after{
@@ -254,6 +254,17 @@
             display:flex;
             flex-direction:column;
             height:100%;
+            &.no-left{
+                width: 100%;
+                .infoBoxRightBom .infoBoxRightBominfo dl dd .item-news{
+                    .txt-font{
+                        flex:none;
+                        .txt-time{
+                            padding: 0 15px 0 50px;
+                        }
+                    }
+                }
+            }
             .infoBoxRightTop{
                 clear:both;
                 display:block;
@@ -321,6 +332,11 @@
                                     cursor:pointer;
                                     transition:all .3s;
                                     padding-left:15px;
+                                    &:visited{
+                                        .txt-type,.txt-title{
+                                            color: #999!important;
+                                        }
+                                    }
                                     span{
                                         vertical-align:top;
                                     }
@@ -349,6 +365,13 @@
                                     }
                                     &:hover{
                                         margin-left:-5px;
+                                    }
+                                    .txt-time{
+                                        font-size:14px;
+                                        color:#999999;
+                                        padding:0 15px;
+                                        height:30px;
+                                        line-height:30px;
                                     }
                                 }
                                 .txt-time{
