--- a/src/styles/-home.scss
+++ b/src/styles/-home.scss
@@ -305,6 +305,7 @@
                                 font-size:13px;
                                 color:#666666;
                                 font-weight:normal;
+                                padding-left: 10px;
                             }
                         }
                         &:first-child{
