--- a/src/styles/-singleperson.scss
+++ b/src/styles/-singleperson.scss
@@ -862,7 +862,7 @@
 	                height: 6px;
                     border-radius: 50%;
                     margin-right: 6px;
-                    margin-top:-4px;
+                    margin-top:-3px;
                     background-color: #8fb2f3;
                 }
             }
@@ -901,8 +901,17 @@
                     vertical-align: top;
                     width: 30px;
                     height: 28px;
-                    background: url(../assets/mildeal.png) center center no-repeat;
-                    background-size: 100% auto;
+                    position: relative;
+                    &:after{
+                        content:'';
+                        position: absolute;
+                        left:0px;
+                        top:1px;
+                        width:100%;
+                        height:100%;
+                        background: url(../assets/mildeal.png) center center no-repeat;
+                        background-size: 100% auto;
+                    }
                 }
                 span{
                     display: inline-block;
