--- a/src/styles/-variables.scss
+++ b/src/styles/-variables.scss
@@ -22,6 +22,7 @@ $fontsize14:14px;
 $fontsize15:15px;
 $fontsize16:16px;
 $fontsize17:17px;
+$fontsize18:18px;
 $fontsize19:19px;
 $fontsize20:20px;
 $fontsize21:21px;
