--- a/src/styles/-workOrder.scss
+++ b/src/styles/-workOrder.scss
@@ -177,7 +177,7 @@
         margin-top:15px;
     }
     .order-title{
-        &>span{
+        &>a{
             cursor:pointer;
             transition:all .3s;
             &:hover{
