--- a/src/styles/-webMsg.scss
+++ b/src/styles/-webMsg.scss
@@ -18,7 +18,6 @@
             margin: 2px 0;
             border: 1px solid #fafafa;
             border-radius: 4px;
-            padding: 0 10px;
             line-height:0;
             font-size:0;
             cursor: pointer;
@@ -50,6 +49,11 @@
                 vertical-align: top;
                 font-size:$fontsize13;
             }
+            a{
+                display: block;
+                padding: 0 10px;
+            }
+            
         }
     }
     .search-wrap{
