链接跳转改为router-link超链接

--- a/src/styles/-singleperson.scss
+++ b/src/styles/-singleperson.scss
@@ -305,6 +305,7 @@
     .personMore{
         margin-top: 36px;
         .pHistory,.pCompare{
+            display: block;
             text-align: center;
             color: #444444;
             font-size:$fontsize15;
