--- a/src/styles/-home.scss
+++ b/src/styles/-home.scss
@@ -307,6 +307,20 @@
                                 font-weight:normal;
                                 padding-left: 10px;
                             }
+                            .scrollIcon{
+                                display: block;
+                                width: 30px;
+                                height: 30px;
+                                background: url(../assets/right-btn.png) center center no-repeat;
+                                background-size: 6px auto;
+                                transform: rotate(90deg);
+                                float: right;
+                                cursor: pointer;
+                                transition: all 0.3s ease;
+                            }
+                            .scrollTop{
+                                transform: rotate(270deg);
+                            }
                         }
                         &:first-child{
                             dt{background:#e4eefd;}
