--- a/src/styles/-teamMember.scss
+++ b/src/styles/-teamMember.scss
@@ -547,6 +547,20 @@
       }
     }
   }
+  .contrast-fixed{
+    position: fixed;
+    top: 52px;
+    z-index: 999;
+    box-shadow: 0px 2px 3px #eee;
+    &:before{
+      position: absolute;
+      left: 0;
+      top: -20px;
+      width: 100%;
+      height: 20px;
+      background-color: #f0f0f0;
+    }
+  }
   .result-panel{
     .item-row{
       margin-top: 20px;
@@ -1090,6 +1104,9 @@
         margin-top: 20px;
       }
     }
+  }
+  .resulttop{
+    margin-top: 92px;
   }
 }
 
