几处文字大小修改

--- a/src/styles/-teamMember.scss
+++ b/src/styles/-teamMember.scss
@@ -643,7 +643,7 @@
                   }
                   >strong{
                     line-height: 40px;
-                    font-size: 34px;
+                    font-size: $fontsize28;
                     margin-right: 15px;
                     color: #f63c3a;
                   }
