--- a/src/styles/-variables.scss
+++ b/src/styles/-variables.scss
@@ -29,8 +29,10 @@ $fontsize21:21px;
 $fontsize23:23px;
 $fontsize25:25px;
 $fontsize27:27px;
+$fontsize28:28px;
 $fontsize29:29px;
 $fontsize31:31px;
+$fontsize32:32px;
 $fontsize36:36px;
 $fontsize47:47px;
 // sidebar
