--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -34,6 +34,7 @@
 @import './-MemberCompare.scss';
 @import './-singleperson.scss';
 @import './-stat.scss';
+@import './-productAnalysis.scss';
 .clear{
   clear:both;
   display:block;  
