--- a/src/styles/-dataOverview.scss
+++ b/src/styles/-dataOverview.scss
@@ -1,15 +1,25 @@
 ﻿.overview-page{
   padding: 0!important;
+  background-color: #101626;
   .box-card{
-    padding: 0;
+    padding: 15px;
   }
   .nowCate{
     padding: 15px 20px;
-    background-color: #fff;
+    background-color: #101626;
+	  border-bottom: solid 1px #1d2244;
     font-size: 18px;
     line-height: 24px;
-    color: #1a1a1a;
-    border: solid 1px #ededed;
+    color: #fff;
+    .countTime{
+      font-size: 13px;
+      margin-left: 15px;
+      color: rgba(255,255,255,0.5);
+      display: inline-block;
+      padding-left: 18px;
+      background: url(../assets/tips.png) left center no-repeat;
+      background-size: 13px auto;
+    }
   }
   // &.cn-stat{
   //   .hxpage{
@@ -47,7 +57,9 @@
   // }
 }
 .hxpage{
-  background: #fff;
+  background-image: linear-gradient(131deg, #24335b 0%, #1c1f40 100%);
+  padding: 22px 25px 20px;
+  margin-bottom: 20px;
   &.money-page{
     .module-top{
       padding: 30px 30px 20px;
@@ -58,44 +70,30 @@
       padding: 30px 30px 15px;
     }
   }
-  .module-top{
-    padding: 30px;
-    border: 1px solid #efefef;
-    transition: all 0.3s ease;
-    position: relative;
-    z-index: 1;
-    margin-left:-1px;
-    margin-top: -1px;
-    &:hover{
-      border: 1px solid #fff;
-      box-shadow: 0 0 24px rgba(0, 0, 0, 0.2);
-      z-index: 1;
-    }
-  }
   .title-view{
     height: 24px;
     line-height: 24px;
     margin-bottom: 10px;
     .title{
       font-size: 16px;
-      color: #1a1a1a;
+      color: #fff;
       float: left;
       margin-right: 4px;
       font-weight: bold;
       span{
-        font-size: 12px;
+        font-size: 13px;
         color: #a1a1a1;
         font-weight: normal;
         margin-left: 10px;
       }
     }
     .unit{
-      font-size: 12px;
+      font-size: 13px;
       color: #a1a1a1;
       float: left;
     }
     .more{
-      font-size: 12px;
+      font-size: 13px;
       color: #a1a1a1;
       float: right;
       cursor: pointer;
@@ -141,55 +139,69 @@
     }
   }
   .contrast-view{
-    height: 40px;
-    margin-bottom: 15px;
+    width: 160px;
+    float: left;
+    margin-top: 10px;
     .redtext{
-      float: left;
-      font-size: 22px;
-      color: #eb3737;
+      font-size: 34px;
+      line-height: 42px;
+      color: #fff;
       font-weight: bold;
-      margin-right: 15px;
     }
     .redright{
-      float: left;
+      margin-top: 4px;
       .conname{
-        font-size: 12px;
+        font-size: 13px;
         line-height: 20px;
-        color: #999999;
+        color: rgba(255,255,255,0.5);
+        display: inline-block;
       }
       .num{
-        font-size: 12px;
+        font-size: 13px;
         line-height: 20px;
         position: relative;
+        display: inline-block;
+        margin-left: 10px;
       }
       .up{
-        color: #f25e5e;
+        color: #ff1008;
       }
       .down{
         color: #2dbb4c;
       }
     }
   }
-  .chart-top{
-    height: 68px;
+  .mix_body{
+    margin-top: 20px;
   }
-  .module-bottom{
-    padding: 30px;
-    border: 1px solid #efefef;
-    transition: all 0.3s ease;
+  .mix_body:after{
+    content: '';
+    display: block;
+    clear: both;
+  }
+  &.btm_shadow{
     position: relative;
-    z-index: 1;
-    margin-left:-1px;
-    margin-top: -1px;
-    &:hover{
-      border: 1px solid #fff;
-      box-shadow: 0 0 24px rgba(0, 0, 0, 0.2);
-      z-index: 1;
+    padding-bottom: 16px;
+    &:before{
+      content: '';
+      display: block;
+      position: absolute;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      background: url(../assets/shadow_bg.png) left bottom no-repeat;
+      background-size: 100% auto;
     }
   }
+  .chart-top{
+    height: 78px;
+    float: right;
+    width: calc(100% - 250px);
+  }
   .chart-bottom{
-    height: 260px;
-    margin-top: 35px;
+    height: 310px;
+    margin-top: 15px;
   }
   .map-chart{
     float: left;
@@ -414,6 +426,14 @@
       }
     }
   }
+}
+#XpanYearsChartBot{
+  margin-left: -25px;
+  margin-right: -25px;
+}
+#ScoreYearsChartBot{
+  margin-left: -25px;
+  margin-right: -25px;
 }
 .toolDiv{
   .title{
